libraries/ckit/regression/valid-programs/a30.c
void *f(int x) {
 return((void *) (((int) f) + x) );
}

main () {
 return(0);
}
