libraries/ckit/regression/invalid-programs/r62.c
main () {
 return(0);
}

f(int x, int x) {
  x = x;
}

